--- a/bem_summer_school/fmm.ipynb
+++ b/bem_summer_school/fmm.ipynb
@@ -18,7 +18,10 @@
    "source": [
     "Fast Multipole Methods allow the $\\mathcal{O}(N)$ computation of Green's function interactions. While the algorithmic description is very different to $\\mathcal{H}$-matrix methods the underlying idea of evaluating near-field interactions directly and far-field interactions approximately through low-rank representations, is similar.\n",
     "\n",
-    "There are a multitude of different types of Fast Multipole Methods. In this section we give a very high-level description that avoids technical details as far as possible which distinguish different typs of FMM."
+    "There are a multitude of different types of Fast Multipole Methods. In this section we give a very high-level description that avoids technical details as far as possible which distinguish different typs of FMM.\n",
+    "\n",
+    "A beautiful introduction to the ideas of the FMM is the paper {cite:p}`ying_pedestrian_fmm`.\n",
+    "Well worth a read is the original article by {cite:p}`GREENGARD1987325`.\n"
    ]
   },
   {
@@ -198,12 +201,11 @@
     "\n",
     "Frequently used implementations include the following.\n",
     "\n",
-    "- The classical Greengard/Rohklin FMM based on spherical harmonics expansions. This is the classical FMM as originally described by Greengard and Rohklin. It is based on approximating fields by spherical harmonic expansions and the translation of these expansions between boxes.\n",
-    "Over the years a number of improvements have been made to these methods. They are memory efficient and fast.\n",
+    "- The classical Greengard/Rohklin FMM {cite:p}`GREENGARD1987325` based on spherical harmonics expansions. Over the years a number of improvements have been made to this method. Modern variants are memory efficient and fast..\n",
     "\n",
-    "- Kernel-Independent FMM. The KIFMM approximates local and exterior fields by discrete single-layer potential representations over the boundary of a box. Translation operators are implemented by a mixture of approximation operators, low-rank approximations, and Fast Fourier Transforms, depending on the implementational details. These methods are considered very efficient for high accuracy requirements.\n",
+    "- Kernel-Independent FMM {cite:p}`YING2004591`. The KIFMM approximates local and exterior fields by discrete single-layer potential representations over the boundary of a box. Translation operators are implemented by a mixture of approximation operators, low-rank approximations, and Fast Fourier Transforms, depending on the implementational details. These methods are considered very efficient for high accuracy requirements.\n",
     "\n",
-    "- Black-Box FMM. The Black-Box FMM uses Chebychev interpolation to represent kernels. Translation operators are implemented by a mixture of low-rank approximation techniques and direct evaluation of Chebychev interpolation polynomials."
+    "- Black-Box FMM {cite:p}`FONG20098712`. The Black-Box FMM uses Chebychev interpolation to represent kernels. Translation operators are implemented by a mixture of low-rank approximation techniques and direct evaluation of Chebychev interpolation polynomials."
    ]
   },
   {
