--- a/bem_summer_school/hmatrices.ipynb
+++ b/bem_summer_school/hmatrices.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "Nevertheless, the algorithmic implementation is very simple and parallelisation is easy. This is why they are still very popular. Moreover, in many practical applications it seems the case that also for oscillatory problems they keep good performance into the medium wavenumber regime (though their asymptotic complexity is not optimal here).\n",
     "\n",
-    "In the literature $\\mathcal{H}$-matrix technqiues are also often called ACA methods. The historical reason is that $\\mathcal{H}$-matrices are often implemented using adaptive cross approximation. Nevertheless, this is an inaccurate description as ACA is merely the algorithm that low-rank compresses the blocks in an $\\mathcal{H}$-matrix. Other low-rank compression techniques can equally be applied."
+    "In the literature $\\mathcal{H}$-matrix technqiues are also often called ACA methods. The historical reason is that $\\mathcal{H}$-matrices are often implemented using adaptive cross approximation. Nevertheless, this is an inaccurate description as ACA is merely the algorithm that low-rank compresses the blocks in an $\\mathcal{H}$-matrix. Other low-rank compression techniques can equally be applied.\n",
+    "\n",
+    "A good practical introduction to hierarchical matrices is the book {cite:p}`bebendorf_hmatrices`. A more recent and comprehensive treatise on hierarchical matrices is given in {cite:p}`hackbusch_hmatrices`. An excellent reference for $\\mathcal{H}^2$-matrices is {cite:p}`boerm_nonlocal_operators`."
    ]
   },
   {
