--- a/bem_summer_school/references.bib
+++ b/bem_summer_school/references.bib
@@ -6,3 +6,96 @@
   volume={157},
   pages={215-224}
 }
+
+@book{martinsson_fast_solvers,
+title = {Fast Direct Solvers for Elliptic PDEs},
+publisher = {SIAM},
+author = {Per-Gunnar Martinsson},
+year = {2019}
+}
+
+@book{bebendorf_hmatrices,
+title = {Hierarchical Matrices},
+publisher = {Springer},
+author = {Mario Bebendorf},
+year = {2008}
+}
+
+@book{boerm_nonlocal_operators,
+title={Efficient Numerical Methods for Non-local Operators},
+publisher={European Mathematical Society},
+author={Steffen B\"{o}rm},
+year = {2010},
+}
+
+@book{hackbusch_hmatrices,
+title={Hierarchical Matrices: Algorithms and Analysis},
+author={Wolfgang Hackbusch},
+year={2015},
+publisher={Springer},
+}
+
+
+
+@article{hca_boerm,
+	abstract = {The efficient treatment of dense matrices arising, e.g., from the finite element discretisation of integral operators requires special compression techniques. In this article we use the -matrix representation that approximates the dense stiffness matrix in admissible blocks (corresponding to subdomains where the underlying kernel function is smooth) by low-rank matrices. The low-rank matrices are assembled by a new hybrid algorithm (HCA) that has the same proven convergence as standard interpolation but also the same efficiency as the (heuristic) adaptive cross approximation (ACA).},
+	author = {B{\"o}rm, Steffen and Grasedyck, Lars},
+	date = {2005/08/01},
+	date-added = {2022-06-21 14:01:43 +0100},
+	date-modified = {2022-06-21 14:01:43 +0100},
+	id = {B{\"o}rm2005},
+	isbn = {0945-3245},
+	journal = {Numerische Mathematik},
+	number = {2},
+	pages = {221--249},
+	title = {Hybrid cross approximation of integral operators},
+	volume = {101},
+	year = {2005},
+    }
+
+@article{ying_pedestrian_fmm,
+author = {Ying, Lexing},
+year = {2012},
+month = {05},
+pages = {},
+title = {A pedestrian introduction to fast multipole methods},
+volume = {55},
+journal = {Science China Mathematics},
+doi = {10.1007/s11425-012-4392-0}
+}
+
+@article{GREENGARD1987325,
+title = {A fast algorithm for particle simulations},
+journal = {Journal of Computational Physics},
+volume = {73},
+number = {2},
+pages = {325-348},
+year = {1987},
+issn = {0021-9991},
+author = {L Greengard and V Rokhlin},
+}
+
+@article{YING2004591,
+title = {A kernel-independent adaptive fast multipole algorithm in two and three dimensions},
+journal = {Journal of Computational Physics},
+volume = {196},
+number = {2},
+pages = {591-626},
+year = {2004},
+issn = {0021-9991},
+author = {Lexing Ying and George Biros and Denis Zorin},
+keywords = {Fast multipole methods, Fast solvers, Integral equations, Single-layer potential, Double-layer potential, Particle methods, -body problems},
+}
+
+@article{FONG20098712,
+title = {The black-box fast multipole method},
+journal = {Journal of Computational Physics},
+volume = {228},
+number = {23},
+pages = {8712-8725},
+year = {2009},
+issn = {0021-9991},
+author = {William Fong and Eric Darve},
+keywords = {Fast multipole method, Interpolation, Chebyshev polynomials, Singular value decomposition},
+}
+	
