--- a/_sources/low_rank_compression.ipynb
+++ b/_sources/low_rank_compression.ipynb
@@ -6,8 +6,15 @@
    "source": [
     "# Low rank compressibility\n",
     "\n",
-    "In this section we discuss basic properties of low-rank approximations and briefly introduce some algorithms to compute low-rank approximations. This will form the foundations to understand fast evaluation methods such as Hierarchical Matrices or Fast Multipole Methods."
+    "In this section we discuss basic properties of low-rank approximations and briefly introduce some algorithms to compute low-rank approximations. This will form the foundations to understand fast evaluation methods such as Hierarchical Matrices or Fast Multipole Methods.\n",
+    "\n",
+    "An excellent introduction into low-rank approximation techniques is given by {cite:p}`martinsson_fast_solvers`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -407,7 +414,11 @@
     "\n",
     "such that $A = S_k + R_k$.\n",
     "\n",
-    "We are not discussing adaptive stopping criteria and the right choice of the row indices $i_k$ here. ACA is highly effective for kernel matrices arising from smooth kernels. However, it can fail if the underlying kernel function is not smooth (e.g. a double-layer kernel on over the boundary of a cube).\n"
+    "We are not discussing adaptive stopping criteria and the right choice of the row indices $i_k$ here. ACA is highly effective for kernel matrices arising from smooth kernels. However, it can fail if the underlying kernel function is not smooth (e.g. a double-layer kernel on over the boundary of a cube).\n",
+    "\n",
+    "A good introduction to adaptive cross approximation and its practical use is contained in {cite:p}`bebendorf_hmatrices`. Many problems from the heuristic use of the standard ACA are avoided by hybrid cross approximation which includes analytic information into the algorithm. More information can be found in {cite:p}`hca_boerm`.\n",
+    "\n",
+    "\n"
    ]
   },
   {
