--- a/bem_summer_school/low_rank_compression.ipynb
+++ b/bem_summer_school/low_rank_compression.ipynb
@@ -52,10 +52,10 @@
     "Let $A\\in\\mathbb{C}^{m\\times n}$. If \n",
     "\n",
     "$$\n",
-    "M\\approx CZ^H \n",
+    "A\\approx CZ^H \n",
     "$$\n",
     "\n",
-    "for $C, Z\\in\\mathbb{C}^{m\\times k}$ with $k\\ll \\min\\{m, n\\}$\n",
+    "for $C\\in\\mathbb{C}^{m\\times k}$, $Z\\in\\mathbb{C}^{n\\times k}$ with $k\\ll \\min\\{m, n\\}$\n",
     "\n",
     "we say that $A$ has a low-rank approximation of rank $k$.\n"
    ]
@@ -208,7 +208,7 @@
     "Then\n",
     "\n",
     "$$\n",
-    "G = CZ^H + R_k(x_i, y_j).\n",
+    "G \\approx CZ^H.\n",
     "$$"
    ]
   },
@@ -231,7 +231,7 @@
     "\n",
     "The index $k$ is the number of terms in the Taylor expansion and given as $k=\\left(\\begin{array}{c}m+d\\\\ d\\end{array}\\right)$.\n",
     "\n",
-    "The parameter $k$ is the space dimension. In our case $d=3$.\n",
+    "The parameter $d$ is the space dimension. In our case $d=3$.\n",
     "\n",
     "An alternative to Taylor series is separable expansion by interpolation, or in the case of Laplace/Helmholtz type kernels spherical harmonics\n",
     "type expansions.\n",
